<resources>
    <string name="app_name">Calculator</string>

    <string name="empty">empty</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="Ce">CE</string>
    <string name="delete">del</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="div">/</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="mult">*</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="minus">-</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="result">=</string>
    <string name="plus">+</string>
    <string name="pow">^</string>
    <string name="sqrt">√</string>

    <string name="bin">BIN   </string>
    <string name="oct">OCT   </string>
    <string name="dec">DEC   </string>
    <string name="hex">HEX   </string>

    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>

    <string-array name="mode">
        <item>Обычный</item>
        <item>Программный</item>
    </string-array>
</resources>
