<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:inputType="textNoSuggestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="0"
        android:id="@+id/editText1"
        android:gravity="end|center_vertical"
        android:textSize="30sp"
        android:cursorVisible="false"
        android:focusable="false"
        android:background="@null"
        android:singleLine="true"
        android:paddingRight="15dp" />

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnLbracket"
            android:text="@string/left_bracket"
            android:layout_weight="1"
            android:textSize="25sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            />

        <Button
            android:id="@+id/btnRbracket"
            android:text="@string/right_bracket"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pow"
            android:textSize="25sp"
            android:id="@+id/btnPow"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textSize="25sp"
            android:id="@+id/btnDel" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/btn7"
            android:textSize="25sp"
            android:text="@string/seven"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/eight"
            android:textSize="25sp"
            android:id="@+id/btn8"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/nine"
            android:textSize="25sp"
            android:id="@+id/btn9"/>

        <Button
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/div"
            android:id="@+id/btnDiv"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/btn4"
            android:text="@string/four"/>

        <Button
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/five"
            android:id="@+id/btn5"/>

        <Button
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/six"
            android:id="@+id/btn6"/>

        <Button
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mult"
            android:id="@+id/btnMult"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/btn1"
            android:text="@string/one"/>

        <Button
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/two"
            android:id="@+id/btn2"/>

        <Button
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/three"
            android:id="@+id/btn3"/>

        <Button
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/minus"
            android:id="@+id/btnMinus"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/btnDot"
            android:text="@string/dot"/>

        <Button
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/zero"
            android:id="@+id/btn0"/>

        <Button
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/result"
            android:id="@+id/btnResult"/>

        <Button
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus"
            android:id="@+id/btnPlus"/>

    </LinearLayout>

</LinearLayout>