<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/linLayout"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/editText"
            android:text="0"
            android:gravity="end|center_vertical"
            android:textSize="30sp"
            android:paddingRight="15dp"
            android:cursorVisible="false"
            android:focusable="false"
            android:background="@null"
            android:singleLine="true"
            android:inputType="textNoSuggestions"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_bin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/bin"
                        android:layout_weight="1"/>

                    <RadioButton
                        android:id="@+id/radio_oct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/oct"
                        android:layout_weight="1" />

                    <RadioButton
                        android:id="@+id/radio_dec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/dec"
                        android:layout_weight="1"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/radio_hex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/hex"
                        android:layout_weight="1"
                         />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:id="@+id/editTextBin"
                        android:textSize="20sp"
                        android:inputType="textNoSuggestions"
                        android:paddingRight="15dp"
                        android:layout_marginLeft="10dp"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:background="@null"
                        android:singleLine="true"
                        />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:id="@+id/editTextOct"
                        android:textSize="20sp"
                        android:inputType="textNoSuggestions"
                        android:paddingRight="15dp"
                        android:layout_marginLeft="10dp"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:background="@null"
                        android:singleLine="true"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:id="@+id/editTextDec"
                        android:textSize="20sp"
                        android:inputType="textNoSuggestions"
                        android:paddingRight="15dp"
                        android:layout_marginLeft="10dp"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:background="@null"
                        android:singleLine="true"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:id="@+id/editTextHex"
                        android:textSize="20sp"
                        android:inputType="textNoSuggestions"
                        android:paddingRight="15dp"
                        android:layout_marginLeft="10dp"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:background="@null"
                        android:singleLine="true"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >

        <Button
            android:enabled="false"
            android:id="@+id/btnA"
            android:text="@string/A"
            android:textSize="25sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:enabled="false"
            android:id="@+id/btnB"
            android:text="@string/B"
            android:textSize="25sp"
            android:layout_width="0dp"
            android:scrollHorizontally="true"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:enabled="false"
            android:id="@+id/btnC"
            android:text="@string/C"
            android:textSize="25sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:enabled="false"
            android:id="@+id/btnD"
            android:text="@string/D"
            android:textSize="25sp"
            android:layout_width="0dp"
            android:scrollHorizontally="true"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:enabled="false"
            android:id="@+id/btnE"
            android:text="@string/E"
            android:textSize="25sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:enabled="false"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/F"
            android:textSize="25sp"
            android:id="@+id/btnF"/>

        <Button
            android:textSize="25sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:id="@+id/btnDel"
            android:text="@string/delete"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/btn7"
            android:textSize="25sp"
            android:text="@string/seven"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/eight"
            android:textSize="25sp"
            android:id="@+id/btn8"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/nine"
            android:textSize="25sp"
            android:id="@+id/btn9"/>
        <Button
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/div"
            android:id="@+id/btnDiv"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/btn4"
            android:text="@string/four"/>

        <Button
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/five"
            android:id="@+id/btn5"/>

        <Button
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/six"
            android:id="@+id/btn6"/>

        <Button
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/mult"
            android:id="@+id/btnMult"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/btn1"
            android:text="@string/one"/>

        <Button
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/two"
            android:id="@+id/btn2"/>

        <Button
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/three"
            android:id="@+id/btn3"/>

        <Button
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/minus"
            android:id="@+id/btnMinus"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnLbracket"
            android:text="@string/left_bracket"
            android:layout_weight="0.5"
            android:textSize="25sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            />

        <Button
            android:id="@+id/btnRbracket"
            android:text="@string/right_bracket"
            android:textSize="25sp"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            />

        <Button
            android:textSize="25sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/zero"
            android:id="@+id/btn0"/>

        <Button
            android:textSize="25sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/result"
            android:id="@+id/btnResult"/>

        <Button
            android:textSize="25sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus"
            android:id="@+id/btnPlus"/>

    </LinearLayout>

</LinearLayout>
